--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -16,6 +16,14 @@
     "isolatedModules": true,
     "jsx": "react-jsx"
   },
-  "include": ["src"],
+  "include": [
+    "src",
+    "dist/App.js",
+    "dist/TryOnView.js",
+    "dist/ProductView.js",
+    "dist/LandingPage.js",
+    "dist/Navbar.js",
+    "src/index.js"
+  ],
   "exclude": ["node_modules", "build", "dist"]
 }
