--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,18 +9,22 @@
     "@types/jest": "^29.5.1",
     "@types/node": "^20.1.4",
     "@types/react": "^18.2.6",
+    "@types/react-bootstrap": "^0.32.32",
     "@types/react-dom": "^18.2.4",
+    "bootstrap-icons": "^1.10.5",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently \"npm run backend\" \"react-scripts start\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "backend": "cd ../backend && npm start"
   },
   "eslintConfig": {
     "extends": [
@@ -43,7 +47,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.6",
-    "eslint": "^8.40.0",
+    "concurrently": "^7.3.1",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "typescript": "^4.9.5"
