--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.1",
+    "react-modal": "^3.16.1",
+    "react-router-dom": "^6.11.2",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -46,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-modal": "^3.16.0",
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.6",
     "concurrently": "^7.3.1",
