--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,10 +15,14 @@
     "bootstrap-icons": "^1.10.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
+    "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.11.2",
     "react-scripts": "^5.0.1",
+    "react-three-fiber": "^6.0.13",
+    "three": "^0.152.2",
+    "vr": "^0.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
